# lion-func

./: .gitignore  lion-func-doc.md  lion-func-pipeline.txt  local.settings.json  orchestration.md  pyproject.toml  requirements.txt  scaffold-lion-deploy.txt  scaffold-lion-func.txt  spin-off-test.sh
.github/workflows/: lion-func-pipeline.yml  main_lion-func.yml
bash/: build_container_app.sh  configure_CICD_VM.sh  configure_app_settings.sh  configure_container.sh
createApp/: __init__.py  function.json  spawn_task.py
startApp/: __init__.py  function.json
stopApp/: __init__.py  function.json
utils/: get_sql_env.py
