[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "lion"
version = "1.0.34"
description = "Linehaul Optimization for Network"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alireza Asadi", email = "alireza.asadi@fedex.com" },
]
maintainers = [
    { name = "Alireza Asadi", email = "alireza.asadi@fedex.com" },
]
dependencies = [
    "azure-functions",
    "requests",
    "dotenv",
    "azure-identity",
    "azure-mgmt-resource",
    "azure-mgmt-appcontainers"
]

[project.scripts]
lion = "lion.lion_app:main"

[tool.setuptools]
py-modules = [
    "dct_tour",
]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "lion",
    "lion.*",
]
